Bug 1278826 - add word-wrap (#416)

--- a/pontoon/base/static/css/user.css
+++ b/pontoon/base/static/css/user.css
@@ -248,6 +248,7 @@
   font-size: 16px;
   margin: -1em 0 0 2em;
   line-height: 1.6;
+  word-wrap: break-word;
 }
 
 #timeline .label {
